apps/truecommand/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truecommand
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: truecommand
    app.kubernetes.io/name: truecommand
