apps/truecommand/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truecommand
spec:
  rules:
    - host: truecommand.mobrockers.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: truecommand
                port:
                  name: http
            pathType: Prefix
  tls:
    - hosts:
        - truecommand.mobrockers.com
